--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,7 @@
+# This YAML configuration file specifies pre-commit hooks for various code quality checks.
+
 repos:
+  # General purpose hooks from pre-commit-hooks repository
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -8,41 +11,47 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
         args:
-          - --markdown-linebreak-ext=md
+          - --markdown-linebreak-ext=md  # Additional arguments for handling markdown files
 
+  # Python import sorting using isort
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
 
+  # Spell checking using codespell
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.5
     hooks:
       - id: codespell
         args:
-          - --skip=docs/yarn.lock
+          - --skip=docs/yarn.lock  # Excluding specific files
 
+  # Python code formatting using Black
   - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
       - id: black
 
+  # Markdown linting with fixes using markdownlint-cli
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.35.0
     hooks:
       - id: markdownlint-fix
 
+  # Python style guide enforcement using flake8
   - repo: https://github.com/PyCQA/flake8
     rev: 6.1.0
     hooks:
       - id: flake8
 
+  # Local repository hooks, example for Pyre type checker
   - repo: local
     hooks:
       - id: pyre
-        name: pyre
-        entry: pyre check
-        pass_filenames: false
+        name: pyre  # A name for easier identification
+        entry: pyre check  # Command to run the hook
+        pass_filenames: false  # Does not pass filenames as arguments
         language: python
         types:
-          - python
+          - python  # Specifies that this is intended for Python files
