--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=ghcr.io/${{ github.repository_owner }}/unifi-cam-proxy-tapo
+          DOCKER_IMAGE=ghcr.io/riddix/unifi-cam-proxy-tapo
           VERSION=dev
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
